--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "libmudtelnet"
 description = "low-level Telnet protocol implementation for MUD clients"
-version = "2.0.1"
+version = "3.0.0"
 edition = "2018"
 readme = "README.md"
 homepage = "https://github.com/blightmud/libmudtelnet"
@@ -13,15 +13,24 @@ categories = ["network-programming"]
 exclude = ["docs/**", ".github/**"]
 
 [dependencies]
-bytes = "1.1.0"
 arbitrary = { version = "1", optional = true, features = ["derive"] }
+bytes = "1.6"
+tokio-util = { version = "0.7", optional = true, default-features = false, features = ["codec"] }
 
 [dev-dependencies]
 compat = { path = "compat", features = ["arbitrary"] }
+tokio = { version = "1", features = ["full"] }
+tokio-stream = { version = "0.1", features = ["full"] }
 
 [features]
 default = ["std"]
 std = []
+
+[lints.rust]
+unsafe_code = "forbid"
+
+[lints.clippy]
+pedantic = { level = "warn", priority = -1 }
 
 [patch.crates-io]
 # We use a fork of libtelnet-rs that has a few patches applied to it to fix bugs also fixed in this repo. If we use
